Mon May 13 15:24:16 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_data_object_alloc): check klass only if klass is not 0.

Mon May 13 14:57:28 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_data_object_alloc, rb_data_typed_object_alloc):
	  use NEWOBJ_OF() instead of NEWOBJ().

Mon May 13 14:51:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_obj_singleton_method): new method Kernel#singleton_method
	  which returns a Method object of the singleton method.
	  non-singleton method causes NameError, but not aliased or zsuper
	  method, right now.
	  [ruby-core:54914] [Feature #8391]

	* vm_method.c (rb_method_entry_at): return the method entry for id at
	  klass, without ancestors.

	* class.c (rb_singleton_class_get): get the singleton class if exists,
	  or nil.

Mon May 13 10:20:59 2013  Yuki Yugui Sonoda  <yugui@google.com>

	* ext/openssl/ossl_ssl.c: Disabled OpenSSL::SSL::SSLSocket if
	  defined(OPENSSL_NO_SOCK).

	  This fixes a linkage error on platforms which do not have socket.
	  OpenSSL itself is still useful as a set of cryptographic functions
	  even on such platforms.

Mon May 13 10:30:04 2013  Zachary Scott  <zachary@zacharyscott.net>

	* hash.c: Hash[] and {} are not equivalent by @eam [Fixes GH-301]

Mon May 13 10:04:22 2013  Zachary Scott  <zachary@zacharyscott.net>

	* random.c: Document Random::DEFAULT by @eLobato [Fixes GH-304]

Sun May 12 21:12:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (OFFT2NUM): RUBY_REPLACE_TYPE also defines macro
	  to convert int type to VALUE if found.

Wed May  8 13:46:52 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/intern.h (rb_iv_set, rb_iv_get): removed. Because
	  ruby.h has a declaration for that.

Wed May  8 13:49:06 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/intern.h (rb_uint2big, rb_int2big, rb_uint2inum)
	(rb_int2inum, rb_ll2inum, rb_ull2inum): removed because ruby.h
	  has a declaration for these.
